Fix display of radio-group requiredIndicator on Safari

--- a/packages/core/src/components/radio-group/radio-group.scss
+++ b/packages/core/src/components/radio-group/radio-group.scss
@@ -32,7 +32,6 @@
   .radio-group-label {
     line-height: var(--gr-line-height-normal);
     color: var(--gr-form-element-label-color);
-    margin-bottom: var(--gr-spacing-xxx-small);
     font-size: var(--gr-form-element-label-font-size-medium);
 
     margin: 0;
